syntax = "proto3";
package augusteum.rpc.grpc;
option  go_package = "github.com/creatachain/augusteum/rpc/grpc;coregrpc";

import "augusteum/msm/types.proto";

//----------------------------------------
// Request types

message RequestPing {}

message RequestBroadcastTx {
  bytes tx = 1;
}

//----------------------------------------
// Response types

message ResponsePing {}

message ResponseBroadcastTx {
  augusteum.msm.ResponseCheckTx   check_tx   = 1;
  augusteum.msm.ResponseDeliverTx deliver_tx = 2;
}

//----------------------------------------
// Service Definition

service BroadcastAPI {
  rpc Ping(RequestPing) returns (ResponsePing);
  rpc BroadcastTx(RequestBroadcastTx) returns (ResponseBroadcastTx);
}
